--- a/index.html
+++ b/index.html
@@ -29,6 +29,6 @@
 </head>
   <body class="bg-gray-50 dark:bg-slate-900 text-gray-800 dark:text-gray-200">
     <div id="root"></div>
-    <script type="module" src="/index.tsx"></script>
+    <script type="module" src="./index.tsx"></script>
   </body>
 </html>
