--- a/index.html
+++ b/index.html
@@ -26,9 +26,12 @@
   }
 }
 </script>
+<!-- Add Babel for in-browser JSX/TSX transpilation -->
+<script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
 </head>
   <body class="bg-gray-50 dark:bg-slate-900 text-gray-800 dark:text-gray-200">
     <div id="root"></div>
-    <script type="module" src="./index.tsx"></script>
+    <!-- Change script type to 'text/babel' to enable transpilation -->
+    <script type="text/babel" data-presets="react,typescript" data-type="module" src="./index.tsx"></script>
   </body>
 </html>
